--- a/src/routes/Home/Home.css
+++ b/src/routes/Home/Home.css
@@ -1,4 +1,58 @@
 .HomePage {
-  padding-left: 20px;
   text-align: center;
+  background-image: url(/images/bgmin.jpg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  padding-top: 20vh;
+  background-size: cover;
+  background-position: center;
+}
+
+.HomePage .wrapper {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 5px;
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.25);
+}
+
+.button {
+  text-decoration: none;
+  background-color: #e2e2e2;
+  color: #333;
+  font-weight: 700;
+  padding: 12px 24px;
+  border-radius: 15px;
+  border-bottom: 3px solid #999;
+  display: inline-block;
+}
+.button.primary {
+  color: #e2e2e2;
+  background-color: rgba(170, 81, 253);
+  border-bottom-color: #8d34e0;
+}
+
+.button:hover {
+  background-color: #999;
+  color: #e2e2e2;
+}
+.button.primary:hover {
+  background-color: #8d34e0;
+}
+
+.HomePage p {
+  margin-bottom: 35px;
+}
+
+section.photo-credit {
+  position: absolute;
+  right: 2px;
+  bottom: 2px;
+  color: #333;
+  font-size: 12px;
 }
